libpurple/wrapper/Account.cs

/* PurpleWrapper - A .NET (CLR) wrapper for libpurple
 *
 * Purple is the legal property of its developers, whose names are too numerous
 * to list here.  Please refer to the COPYRIGHT file distributed with this
 * source distribution.
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02111-1301  USA
 */

/*
 * This file was auto-generated from the libpurple header files to provide a
 * clean interface between .NET/CLR and the unmanaged C library libpurple.
 *
 * This is the second major commit of the code.
 * Next things:
 *  - A few of the .h files have anonymous parameter names (eg: void cat(int, int).
 *    This program will need to assign these parameters names.
 *  - Function pointers inside structs aren't translated correctly into C#.
 *  - Two places there are specific-length arrays (eg: char hostname[256]). The parser
 *    does not detect them as an array.
 */

using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;

namespace PurpleWrapper
{
	public class Account
	{
		public enum PurpleAccountRequestType
		{
			PURPLE_ACCOUNT_REQUEST_AUTHORIZATION = 0
		};

		/*
		 * PurpleAccount * purple_account_new(char * username, char * protocol_id)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_account_new(string username, string protocol_id);

		public static PurpleAccount New(string username, string protocol_id)
		{
			return new PurpleAccount(purple_account_new(username, protocol_id));
		}

		/*
		 * void purple_account_destroy(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_destroy(IntPtr account);

		public static void Destroy(PurpleAccount account)
		{
			purple_account_destroy(account.Reference);
		}

		/*
		 * void purple_account_connect(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_connect(IntPtr account);

		public static void Connect(PurpleAccount account)
		{
			purple_account_connect(account.Reference);
		}

		/*
		 * void purple_account_set_register_callback(PurpleAccount * account, PurpleAccountRegistrationCb cb, void * user_data)
		 * 
		 * Could not generate a wrapper for purple_account_set_register_callback in file "account.h".
		 * Message: The type could not be resolved (PurpleAccountRegistrationCb cb).
		 */

		/*
		 * void purple_account_register(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_register(IntPtr account);

		public static void Register(PurpleAccount account)
		{
			purple_account_register(account.Reference);
		}

		/*
		 * void purple_account_unregister(PurpleAccount * account, PurpleAccountUnregistrationCb cb, void * user_data)
		 * 
		 * Could not generate a wrapper for purple_account_unregister in file "account.h".
		 * Message: The type could not be resolved (PurpleAccountUnregistrationCb cb).
		 */

		/*
		 * void purple_account_disconnect(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_disconnect(IntPtr account);

		public static void Disconnect(PurpleAccount account)
		{
			purple_account_disconnect(account.Reference);
		}

		/*
		 * void purple_account_request_close_with_account(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_request_close_with_account(IntPtr account);

		public static void RequestCloseWithAccount(PurpleAccount account)
		{
			purple_account_request_close_with_account(account.Reference);
		}

		/*
		 * void purple_account_request_close(void * ui_handle)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_request_close(IntPtr ui_handle);

		public static void RequestClose(IntPtr ui_handle)
		{
			purple_account_request_close(ui_handle);
		}

		/*
		 * void purple_account_request_change_password(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_request_change_password(IntPtr account);

		public static void RequestChangePassword(PurpleAccount account)
		{
			purple_account_request_change_password(account.Reference);
		}

		/*
		 * void purple_account_request_change_user_info(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_request_change_user_info(IntPtr account);

		public static void RequestChangeUserInfo(PurpleAccount account)
		{
			purple_account_request_change_user_info(account.Reference);
		}

		/*
		 * void purple_account_set_username(PurpleAccount * account, char * username)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_set_username(IntPtr account, string username);

		public static void SetUsername(PurpleAccount account, string username)
		{
			purple_account_set_username(account.Reference, username);
		}

		/*
		 * void purple_account_set_password(PurpleAccount * account, char * password)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_set_password(IntPtr account, string password);

		public static void SetPassword(PurpleAccount account, string password)
		{
			purple_account_set_password(account.Reference, password);
		}

		/*
		 * void purple_account_set_alias(PurpleAccount * account, char * alias)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_set_alias(IntPtr account, string alias);

		public static void SetAlias(PurpleAccount account, string alias)
		{
			purple_account_set_alias(account.Reference, alias);
		}

		/*
		 * void purple_account_set_user_info(PurpleAccount * account, char * user_info)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_set_user_info(IntPtr account, string user_info);

		public static void SetUserInfo(PurpleAccount account, string user_info)
		{
			purple_account_set_user_info(account.Reference, user_info);
		}

		/*
		 * void purple_account_set_buddy_icon_path(PurpleAccount * account, char * path)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_set_buddy_icon_path(IntPtr account, string path);

		public static void SetBuddyIconPath(PurpleAccount account, string path)
		{
			purple_account_set_buddy_icon_path(account.Reference, path);
		}

		/*
		 * void purple_account_set_connection(PurpleAccount * account, PurpleConnection * gc)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_set_connection(IntPtr account, IntPtr gc);

		public static void SetConnection(PurpleAccount account, PurpleConnection gc)
		{
			purple_account_set_connection(account.Reference, gc.Reference);
		}

		/*
		 * void purple_account_set_remember_password(PurpleAccount * account, gboolean value)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_set_remember_password(IntPtr account, bool value);

		public static void SetRememberPassword(PurpleAccount account, bool value)
		{
			purple_account_set_remember_password(account.Reference, value);
		}

		/*
		 * void purple_account_set_check_mail(PurpleAccount * account, gboolean value)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_set_check_mail(IntPtr account, bool value);

		public static void SetCheckMail(PurpleAccount account, bool value)
		{
			purple_account_set_check_mail(account.Reference, value);
		}

		/*
		 * void purple_account_set_proxy_info(PurpleAccount * account, PurpleProxyInfo * info)
		 * 
		 * Could not generate a wrapper for purple_account_set_proxy_info in file "account.h".
		 * Message: The type could not be resolved (PurpleProxyInfo * info).
		 */

		/*
		 * void purple_account_set_status_types(PurpleAccount * account, GList * status_types)
		 * 
		 * Could not generate a wrapper for purple_account_set_status_types in file "account.h".
		 * Message: The type could not be resolved (GList * status_types).
		 */

		/*
		 * void purple_account_clear_settings(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_clear_settings(IntPtr account);

		public static void ClearSettings(PurpleAccount account)
		{
			purple_account_clear_settings(account.Reference);
		}

		/*
		 * void purple_account_set_int(PurpleAccount * account, char * name, int value)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_set_int(IntPtr account, string name, int value);

		public static void SetInt(PurpleAccount account, string name, int value)
		{
			purple_account_set_int(account.Reference, name, value);
		}

		/*
		 * gboolean purple_account_is_connected(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_account_is_connected(IntPtr account);

		public static bool IsConnected(PurpleAccount account)
		{
			return purple_account_is_connected(account.Reference);
		}

		/*
		 * gboolean purple_account_is_connecting(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_account_is_connecting(IntPtr account);

		public static bool IsConnecting(PurpleAccount account)
		{
			return purple_account_is_connecting(account.Reference);
		}

		/*
		 * gboolean purple_account_is_disconnected(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_account_is_disconnected(IntPtr account);

		public static bool IsDisconnected(PurpleAccount account)
		{
			return purple_account_is_disconnected(account.Reference);
		}

		/*
		 * char * purple_account_get_username(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_account_get_username(IntPtr account);

		public static string GetUsername(PurpleAccount account)
		{
			return purple_account_get_username(account.Reference);
		}

		/*
		 * char * purple_account_get_password(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_account_get_password(IntPtr account);

		public static string GetPassword(PurpleAccount account)
		{
			return purple_account_get_password(account.Reference);
		}

		/*
		 * char * purple_account_get_alias(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_account_get_alias(IntPtr account);

		public static string GetAlias(PurpleAccount account)
		{
			return purple_account_get_alias(account.Reference);
		}

		/*
		 * char * purple_account_get_user_info(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_account_get_user_info(IntPtr account);

		public static string GetUserInfo(PurpleAccount account)
		{
			return purple_account_get_user_info(account.Reference);
		}

		/*
		 * char * purple_account_get_buddy_icon_path(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_account_get_buddy_icon_path(IntPtr account);
